--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "bower": "^1.7.9",
     "easyimage": "^2.1.0",
     "express": "^4.14.0",
     "mz": "^2.4.0",
