--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "paper-tabs": "PolymerElements/paper-tabs#^1.6.2",
     "neon-animation": "PolymerElements/neon-animation#^1.2.4",
     "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
-    "iron-icons": "PolymerElements/iron-icons#^1.1.3"
+    "iron-icons": "PolymerElements/iron-icons#^1.1.3",
+    "paper-menu": "PolymerElements/paper-menu#^1.2.2",
+    "paper-item": "PolymerElements/paper-item#^1.2.1"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
